--- a/meltano.yml
+++ b/meltano.yml
@@ -5,3 +5,27 @@ environments:
 - name: dev
 - name: staging
 - name: prod
+plugins:
+  extractors:
+  - name: tap-google-analytics
+    variant: matatika
+    pip_url: git+https://github.com/Matatika/tap-google-analytics@v0.3.0
+  loaders:
+  - name: target-postgres
+    variant: transferwise
+    pip_url: git+https://github.com/Matatika/pipelinewise-target-postgres@v0.1.0
+  transforms:
+  - name: dbt-google-analytics
+    variant: matatika
+    pip_url: https://github.com/Matatika/dbt-tap-google-analytics@v0.4.0
+  transformers:
+  - name: dbt
+    variant: dbt-labs
+    pip_url: "dbt-core~=1.3.0 dbt-postgres~=1.3.0 dbt-snowflake~=1.3.0\n"
+  files:
+  - name: analyze-google-analytics
+    variant: matatika
+    pip_url: git+https://github.com/Matatika/analyze-google-analytics@v0.4.1
+  - name: files-dbt
+    variant: matatika
+    pip_url: git+https://github.com/Matatika/files-dbt@v1.0.x.1
